# PokeEvaluator

./: .gitignore  20260228_16h56_pokemon_quality_evaluation.md  README.md  pyproject.toml
src/pokeevaluator/: __init__.py  cli.py  i18n.py  interactive.py  session.py  ui.py
src/pokeevaluator/core/: montecarlo.py  planning.py  quality.py  stats.py
src/pokeevaluator/data/: abilities.py  evolutions.py  gen3.py  natures.py  pokedex.py
src/pokeevaluator/models/: pokemon.py  roles.py  specimen.py
tests/: conftest.py  test_abilities.py  test_cli.py  test_comparison.py  test_evolutions.py  test_montecarlo.py  test_planning.py  test_quality.py  test_session.py  test_stats.py
web/: package-lock.json  package.json
web/__tests__/: evaluate.test.ts  planning.test.ts  quality.test.ts  stats.test.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/metodologia/: page.tsx
web/src/app/naturezas/: page.tsx
web/src/app/pokedex/: page.tsx
web/src/components/: LanguageSwitcher.tsx  Tooltip.tsx
web/src/components/evaluator/: EvaluatorForm.tsx  FreshCatchBanner.tsx  NatureSelect.tsx  RoleSelect.tsx  SpeciesSelect.tsx  StatInputGroup.tsx
web/src/components/layout/: Footer.tsx  Navbar.tsx
web/src/components/natures/: NaturesTable.tsx
web/src/components/pokedex/: PokedexTable.tsx
web/src/components/results/: CatchPlanning.tsx  IVTable.tsx  NatureAssessment.tsx  PercentileDisplay.tsx  QualityBar.tsx  ResultsPanel.tsx
web/src/lib/: evaluate.ts  i18n.ts  types.ts
web/src/lib/core/: montecarlo.ts  planning.ts  (+2 more)
web/src/workers/: montecarlo.worker.ts
(+6 files in other folders)
