[project]
name = "pokeevaluator"
version = "0.1.0"
description = "CLI para avaliar qualidade de Pokémon recém-capturados em Gen III"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
pokeval = "pokeevaluator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokeevaluator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
